--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
 
   "name": "Getting started example",
   "description": "This extension shows a Google Image search result for the current page",
+  "author":  "https://github.com/Traci7822",
   "version": "1.0",
 
   "browser_action": {
@@ -13,6 +14,14 @@
   "permissions": [
     "activeTab",
     "https://ajax.googleapis.com/",
-    "storage"
+    "storage",
+    "tabs", "<all_urls>"
+  ],
+
+  "content_scripts": [
+    {
+      "matches": ["https://learn.co/expert-chat"],
+      "js": [ "index.js" ]
+    }
   ]
 }
