--- a/manifest.json
+++ b/manifest.json
@@ -23,5 +23,10 @@
       "matches": ["https://learn.co/expert-chat"],
       "js": [ "index.js" ]
     }
-  ]
+  ],
+
+  "background": {
+    "scripts": ["index.js"],
+    "peristant": false
+  }
 }
