--- a/manifest.json
+++ b/manifest.json
@@ -15,18 +15,31 @@
     "activeTab",
     "https://ajax.googleapis.com/",
     "storage",
-    "tabs", "<all_urls>"
+    "tabs",
+    "<all_urls>"
   ],
 
   "content_scripts": [
     {
       "matches": ["https://learn.co/expert-chat"],
-      "js": [ "index.js" ]
+      "js": [ "index.js" ],
+      "css": ["index.css"]
     }
   ],
 
   "background": {
     "scripts": ["index.js"],
     "peristant": false
-  }
+  },
+
+  "web_accessible_resources": [
+    "index.css",
+    "icon.png"
+  ],
+
+  "icons":
+    {
+      "16": "icon.png",
+      "48": "icon.png"
+    }
 }
