--- a/manifest.json
+++ b/manifest.json
@@ -11,13 +11,16 @@
     "default_popup": "popup.html",
     "default_title": "Learn Auto-Complete"
   },
-  "permissions": [
-    "activeTab",
-    "https://ajax.googleapis.com/",
-    "storage",
-    "tabs",
-    "<all_urls>"
-  ],
+
+//   "permissions": [
+  //   "activeTab",
+  //   "https://ajax.googleapis.com/",
+  //   "storage",
+  //   "tabs",
+  //   "<all_urls>"
+  // ]
+
+  "permissions": ["storage"],
 
   "content_scripts": [
     {
@@ -42,4 +45,5 @@
       "16": "icon.png",
       "48": "icon.png"
     }
+
 }
