--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 2,
 
-  "name": "Getting started example",
-  "description": "This extension shows a Google Image search result for the current page",
+  "name": "Learn Auto Complete",
+  "description": "This extension allows you to save and retrieve commonly used content",
   "author":  "https://github.com/Traci7822",
-  "version": "1.0",
+  "version": "0.0.0.1",
 
   "browser_action": {
     "default_icon": "icon.png",
